--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -79,7 +79,7 @@ services:
       - vhost.d:/etc/nginx/vhost.d
       - ./html:/usr/share/nginx/html
     environment:
-      - DEFAULT_EMAIL=admin@gmail.com     #debe ser un email válido
+      - DEFAULT_EMAIL=juan@beintheg.com     #debe ser un email válido
       - NGINX_PROXY_CONTAINER=nginx-proxy
 
 volumes:
